--- a/QuoteGenerator/index.html
+++ b/QuoteGenerator/index.html
@@ -16,7 +16,7 @@
 
     <div class="quote-container" id="quote-container">
 
-        <!-- Quote element -->
+        <!-- Quote element -->`
         <div class="quote-text">
             <i class="fas fa-quote-left">
                 <span id="quote">
