--- a/QuoteGenerator/index.html
+++ b/QuoteGenerator/index.html
@@ -20,14 +20,14 @@
         <div class="quote-text">
             <i class="fas fa-quote-left">
                 <span id="quote">
-                    What you are is what you have been. What you'll be is what you do now. 
+                   
                 </span>
             </i>
         </div>
         <!-- Author -->
         <div class="quote-author">
             <span id="author">
-                Buddha
+                
             </span>
         </div>
         <!-- Buttons -->
@@ -45,5 +45,6 @@
 
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="quotes.js"></script>
 </body>
 </html>
