--- a/QuoteGenerator/index.html
+++ b/QuoteGenerator/index.html
@@ -42,6 +42,8 @@
 
     </div>
 
+    <!-- loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- Script -->
     <script src="script.js"></script>
